Update page title and meta description for Ossining NY

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="CCM Construction - Professional roofing, siding, gutters, and window services in New Jersey. Quality craftsmanship and reliable service." />
-    <title>CCM Construction | Roofing, Siding, Gutters & Windows | NJ</title>
+    <meta name="description" content="CCM Construction Inc. - Professional roofing, siding, gutters, and window services in Ossining, NY and the NY Metro area. Quality craftsmanship and reliable service." />
+    <title>CCM Construction Inc. | Roofing, Siding, Gutters & Windows | Ossining, NY</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
